Horizontal scroll fixed

--- a/src/components/HomePageComponents/HeaderHome/HeaderHome.scss
+++ b/src/components/HomePageComponents/HeaderHome/HeaderHome.scss
@@ -1,5 +1,9 @@
 @use "../../../assets/sass/global_variables" as *;
 
+* {
+  overflow-x: hidden;
+}
+
 .headerHome {
   background-color: $colourTen;
   color: $colourSix;
